--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "Sim Umira",
+  "name": "Superapps Simumira",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev -p 3001",
     "build": "next build",
-    "start": "next start -p 3001",
+    "start": "next start -- -p 3001",
     "lint": "next lint",
     "sass": "sass ./public/assets/scss:./public/assets/css/",
     "sass-min": "sass ./public/assets/scss:./public/assets/css/ --style compressed"
